# routes/order.js
@@ -1,15 +1,13 @@
 const routes = require('express').Router();
-const {getAllOrders, getOrderById, newOrder, updateOrder, deleteOrder, updateOrderItemId, deleteOrderItemId} = require('../controller/order');
-//const auth = require("../middleware/auth");
+const {getAllOrders, getOrderById, newOrder, deleteOrder} = require('../controller/order');
+const {ensureAuth} = require("../middleware/auth");
 
 
-routes.get('/', getAllOrders);
-routes.get('/:id', getOrderById);
+routes.get('/', ensureAuth, getAllOrders);
+routes.get('/:id', ensureAuth, getOrderById);
 
-routes.post('/', newOrder);
-routes.put('/:id', updateOrder);
-routes.delete('/:id', deleteOrder);
-routes.put('/item/:itemid/shipping/:shippingid', updateOrderItemId);
-routes.delete('/item/:itemid/shipping/:shippingid', deleteOrderItemId);
+routes.post('/', ensureAuth, newOrder);
+routes.delete('/:id', ensureAuth, deleteOrder);
+
 
 module.exports = routes;
