# swagger.json
@@ -494,19 +494,7 @@
             "in": "body",
             "schema": {
               "type": "object",
-              "properties": {
-                "dateCreated": {
-                  "type": "string",
-                  "example": "12/30/2022"
-                },
-                "lastdateModified": {
-                  "type": "string",
-                  "example": "12/30/2022"
-                },
-                "shippingCost": {
-                  "type": "number",
-                  "example": "10.75"
-                },
+              "properties": {                
                 "subtotal": {
                   "type": "number",
                   "example": "32.15"
@@ -514,6 +502,10 @@
                 "taxes": {
                   "type": "number",
                   "example": "2.55"
+                },
+                "shippingCost": {
+                  "type": "number",
+                  "example": "10.75"
                 },
                 "total": {
                   "type": "number",
@@ -547,6 +539,32 @@
                       }
                     }
                   }
+                },
+                "payment": {
+                "type": "object",
+                "properties": {
+                  "clientFirstName": {
+                    "type": "string",
+                    "example": "Eduardo"
+                  },
+                  "clientLastName": {
+                    "type": "string",
+                    "example": "Prieto"
+                  },
+                  "cardNumber": {
+                    "type": "string",
+                    "example": "1239-8745-6321-8765"
+                  },
+                  "cardExpireDate": {
+                    "type": "string",
+                    "example": "09/2024"
+                  },
+                  "cardSecurityCode": {
+                    "type": "number",
+                    "example": "294"
+                  }
+                }
+
                 }
               }
             }
@@ -589,171 +607,11 @@
           }
         }
       },
-      "put": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "orderId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "dateCreated": {
-                  "type": "string",
-                  "example": "12/30/2022"
-                },
-                "lastdateModified": {
-                  "type": "string",
-                  "example": "12/30/2022"
-                },
-                "shippingCost": {
-                  "type": "number",
-                  "example": "10.75"
-                },
-                "subtotal": {
-                  "type": "number",
-                  "example": "32.15"
-                },
-                "taxes": {
-                  "type": "number",
-                  "example": "2.55"
-                },
-                "total": {
-                  "type": "number",
-                  "example": "45.85"
-                },
-                "orderItems": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "productId": {
-                        "type": "string"
-                      },
-                      "quantity": {
-                        "type": "integer"
-                      },
-                      "price": {
-                        "type": "number"
-                      },
-                      "offerDiscount": {
-                        "type": "number"
-                      },
-                      "shippingTypeId": {
-                        "type": "string"
-                      },
-                      "shippingDate": {
-                        "type": "string"
-                      },
-                      "shippingCost": {
-                        "type": "number"
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
       "delete": {
         "description": "",
         "parameters": [
           {
             "name": "orderId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/order/item/{orderitemId}/shipping/{shippingId}": {
-      "put": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "orderitemId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "shippingId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "shippingTypeId": {
-                  "type": "string"
-                },
-                "shippingDate": {
-                  "type": "string"
-                },
-                "shippingCost": {
-                  "type": "number"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "delete": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "orderitemId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "shippingId",
             "in": "path",
             "required": true,
             "type": "string"
